# fooyin-plugin-msuinput

./: CMakeLists.txt  README.md
msuinput/: CMakeLists.txt  msuplugin.cpp  msuplugin.h
